// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> does not overwrite materialize-css classnames 1`] = `
<Checkbox
  className="my-class"
  filledIn={true}
  label="red"
  value="red"
>
  <label
    htmlFor="checkboxmockId"
  >
    <input
      className="filled-in my-class"
      id="checkboxmockId"
      type="checkbox"
      value="red"
    />
    <span>
      red
    </span>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> filled-in 1`] = `
<label
  htmlFor="checkboxmockId"
>
  <input
    className="filled-in"
    id="checkboxmockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders 1`] = `
<label
  htmlFor="checkboxmockId"
>
  <input
    className=""
    id="checkboxmockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders disabled 1`] = `
<label
  htmlFor="checkboxmockId"
>
  <input
    className=""
    disabled={true}
    id="checkboxmockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with id 1`] = `
<label
  htmlFor="test"
>
  <input
    className=""
    id="test"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with indeterminate 1`] = `
<label
  htmlFor="indeterminate-checkboxmockId"
>
  <input
    className=""
    id="indeterminate-checkboxmockId"
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;
